<resources>
    <string name="app_name">Consentrese</string>
    <string name="jugar">Jugar</string>
    <string name="puntaje">Puntuación</string>
    <string name="confi">Configuración</string>
    <string name="salir">Salir</string>
    <string name="jugador1">Jugador 1</string>
    <string name="jugador2">Jugador 2</string>
    <string name="ok">OK</string>
    <string name="ingresejugadores">Ingrese jugadores</string>
</resources>
